# wandb-report-exporter

./: .env.example  .gitignore  LICENSE  Makefile  README.md  observablehq.config.js  package-lock.json  package.json  pyproject.toml
.github/workflows/: deploy-sample-pages.yml
app/src/: leaderboard.md  styles.css
app/src/lib/: data.js  data.ts  duckdb.js  duckdb.ts  format.js  format.ts  types.ts
app/src/lib/components/: ag-grid-table.js  ag-grid-table.ts  perspective-viewer.js  perspective-viewer.ts  summary-cards.js  summary-cards.ts
app/src/lib/pages/: failure-cases.js  failure-cases.ts  leaderboard.js  leaderboard.ts  overview.js  overview.ts  pivot-explorer.js  pivot-explorer.ts  report.js
examples/mnist-sample/: README.md
examples/mnist-sample/processed/: history_eval_metrics.parquet  report_content.json  report_manifest.json  run_summary.parquet  table_predictions.parquet
examples/mnist-sample/processed/panel_tables/: eda-table-before-training.json  validation-prediction-table.json
scripts/: export_marimo_wasm.py  export_wandb_snapshot.py  generate_marimo_report.py  prepare_frontend_assets.mjs  render_vega_svg.mjs  sync_dist_assets.mjs  verify_export.py
tests/: test_export_wandb_snapshot.py  test_generate_marimo_report.py
